       repeated calls in consecutive backend cycles: if one cleanup
       didn't remove enough destructed objects, it is unlikely
       that immediately following ones will.
  - (pkg-tls.c) The OpenSSL read/writes are now retried when necessary.
  - (configure) When searching for the mysqlclient library in the
       usual places, the configure script forgot to clear out the 
       cache flag.

19-Oct-2005 (Lars Duening)
  - (pkg-tls.c) tls_check_certificate() now returns the low-level API
      values, and throws an error if the connection is not secure.

11-Oct-2005 (Lars Duening)
  - (erq/erq.c, xerq/socket.c) Corrected compilation warnings.
  - (lex.c) to_int() no longer accepts "x<num>" as valid sedecimal
       notation (Bug #0000402).

10-Oct-2005 (Lars Duening)
  - (backend.c) Added a clear_state() at the beginning of the
    process_objects() loop, so that errors during the cleanup find
    a consistent machine state (Bug #0000405).

09-Oct-2005 (Lars Duening)
  - (simulate.c) If the catch() handling notices an out-of-memory
      situation, the catch() is ignored. This also fixes an endless
      recursion (Bug #0000406).

04-Oct-2005 (Lars Duening)
  - (doc/concepts/overloading) New man page (thanks, Coogan!).

28-Sep-2005 (Lars Duening)
  - (doc/efun/clone_object) Clarified the variable initialisation.

23-Aug-2005 (Lars Duening)
  - (Makefile.in) The PRCS rules first check if PRCS is available.

20-Jun-2005 (Lars Duening)  (3.3.710)
  - (patchlevel.h.in, version.sh, mk-patchlevel.sh, Makefiles)
      Modified the version numbering system to be compatible between
      Subversion and PRCS.

20-Jun-2005 (Lars Duening)  (3.3.709)
  - (xalloc.c) xalloc used REPLACE_MALLOC before it was defined,
      leading to compilation errors on systems supporting it (Bug #0000393).

19-Jun-2005 (Lars Duening)  (3.3.708)
  - (pkg-pgsql, func_spec) Added new efun pg_conv_string(), courtesy
      of Philipp.