@@ -8723,9 +8723,6 @@ again:
                  * that twin.
                  */
                 s = (mp_int)find_tabled(sp->u.str);
-#ifdef EXT_STRING_STATS
-        stNumTabledChecked++;
-#endif /* EXT_STRING_STATS */
             }
             else
             {
@@ -16456,9 +16453,6 @@ retry_for_shadow:
     if (!mstr_tabled(fun))
     {
         fun = find_tabled(fun);
-#ifdef EXT_STRING_STATS
-        stNumTabledChecked++;
-#endif /* EXT_STRING_STATS */
         if (!fun)
             goto failure2;
     }
